fixed mapbox layout issues

--- a/public/style.css
+++ b/public/style.css
@@ -5,9 +5,9 @@ body {
   margin: 0;
   padding: 0;
 }
-
 #map {
   width: 100%;
+  height: 750px;
 }
 
 .bar {
